<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_all_decks"

            android:title="@string/all_decks" />

        <item
            android:id="@+id/nav_favorites"

            android:title="@string/favorites" />

        <item
            android:id="@+id/nav_categories"

            android:title="@string/categories" />

        <item
            android:id="@+id/nav_statistics"

            android:title="@string/statistics" />
    </group>

    <item android:title="@string/more">
        <menu>
            <item
                android:id="@+id/nav_settings"

                android:title="@string/settings" />

            <item
                android:id="@+id/nav_about"

                android:title="@string/about" />
        </menu>
    </item>
</menu>

<!--android:icon="@drawable/ic_info"
 android:icon="@drawable/ic_settings"
 android:icon="@drawable/ic_statistics"
 android:icon="@drawable/ic_category"-->